src/pages/MarkdownPreviewer/MarkdownPreviewer.css
.markdown-previewer {
  width: 100%;
  padding: 24px;

  display: flex;
  flex-direction: row;
  flex: 1;
  gap: 20px;
}

.markdown-previewer-editor, .markdown-previewer-preview {
  height: 100%;
  width: 50%;

  display: flex;
  flex-direction: column;
  gap: 8px;
}

.markdown-previewer-editor-header-label, .markdown-previewer-preview-header-label {
  font-weight: 600;
  color: var(--text-primary);
}

.markdown-previewer-editor-textarea {
  height: 100%;
  padding: 12px;
  
  font-size: 16px;
  font-family: "Fira code", "Fira Mono", monospace;
  color: var(--text-primary);
  background-color: white;
  border: 2px solid var(--secondary);
  border-radius: 8px;

  resize: none;
}

.markdown-previewer-editor-textarea textarea {
  max-height: 100%;
  outline: none;
}

.markdown-previewer-editor-textarea:focus {
  border-color: var(--secondary);
  outline: none;
}

.markdown-previewer-preview-html {
  max-width: 100%;
  height: 100%;
  padding: 0px 12px;
  overflow: auto;

  color: var(--text-primary);
  background-color: white;
  border-radius: 8px;
  border: 2px solid var(--secondary);
  
  overflow: auto;
}

.markdown-previewer-preview-header, .markdown-previewer-editor-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.markdown-previewer-editor-header-settings {
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.markdown-previewer-preview-header-button {
  font-size: 16px;
  font-weight: 600;
  color: var(--text-primary);
  background-color: var(--primary);
  border: 2px solid var(--secondary);
  border-radius: 4px;
  
  cursor: pointer;
}

